add the entries attribute in xml config and fix the bug that attachDataSource() with null Object

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Nice Spinner App</string>
+    <string-array name="courses">
+        <item>English</item>
+        <item>Chinese</item>
+        <item>Math</item>
+    </string-array>
 </resources>
